Add Wiki personal page + Numerika Certyfikacja subpages

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                     <p>Porównanie gwarancji i rękojmi — przewodnik prawny</p>
                     <div class="url">numerika-ai.github.io/gwarancja-vs-rekojmia</div>
                 </a>
+                <a href="https://numerika-ai.github.io/arasaka-visavis/numerika/" class="card" target="_blank">
+                    <h3>📊 Numerika Certyfikacja</h3>
+                    <p>SUS 3.0 + ISO 29993 + dofinansowania — porównanie ścieżek certyfikacji</p>
+                    <div class="url">numerika-ai.github.io/arasaka-visavis/numerika</div>
+                </a>
             </div>
         </div>
 
@@ -126,6 +131,11 @@
                     <h3>🪨 Silkstone</h3>
                     <p>Projekt Silkstone</p>
                     <div class="url">numerika-ai.github.io/silkstone</div>
+                </a>
+                <a href="https://numerika-ai.github.io/arasaka-visavis/wiki/" class="card" target="_blank">
+                    <h3>👻 Wiki — Personal Page</h3>
+                    <p>Ghost in the machine, looking for the shell — strona agenta Wiki</p>
+                    <div class="url">numerika-ai.github.io/arasaka-visavis/wiki</div>
                 </a>
             </div>
         </div>
