--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
         </div>
 
         <div class="category">
+            <h2>📝 Research & Blog</h2>
+            <div class="grid">
+                <a href="/reasoning-persistence.html" class="card">
+                    <h3>🧠 Reasoning Persistence</h3>
+                    <p>Jak AI traci pamięć ustawień — i jak to naprawiliśmy. Rozwiązanie problemu persistencji konfiguracji w agentach OpenClaw.</p>
+                    <div class="url">numerika-ai.github.io/onepage/reasoning-persistence.html</div>
+                </a>
+            </div>
+        </div>
+
+        <div class="category">
             <h2>🔒 Security Research</h2>
             <div class="grid">
                 <a href="https://numerika-ai.github.io/prompt-injection-research/" class="card" target="_blank">
