Add Obsidian Knowledge Vault research page
- Complete analysis of Obsidian as AI-powered knowledge vault
- Architecture: Loco39 GUI + Spark storage + OpenClaw agents
- Integration with kepano/obsidian-skills
- Comparison of our custom skills vs Obsidian skills
- Step-by-step setup guide for Ubuntu installation
- Dark theme consistent with numerika.ai design
- 24KB comprehensive research document

--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
         <div class="category">
             <h2>📝 Research & Blog</h2>
             <div class="grid">
+                <a href="/obsidian-knowledge-vault.html" class="card">
+                    <h3>💎 Obsidian Knowledge Vault</h3>
+                    <p>Obsidian jako AI-powered Knowledge Vault — GUI dla dokumentów tworzonych przez AI agentów OpenClaw. Architektura Loco39 + Spark + wikilinks.</p>
+                    <div class="url">numerika-ai.github.io/onepage/obsidian-knowledge-vault.html</div>
+                </a>
                 <a href="/reasoning-persistence.html" class="card">
                     <h3>🧠 Reasoning Persistence</h3>
                     <p>Jak AI traci pamięć ustawień — i jak to naprawiliśmy. Rozwiązanie problemu persistencji konfiguracji w agentach OpenClaw.</p>
